dnl  * Project: mediatex's sso
dnl  * Module: autotools for server
dnl  *
dnl  * Process this file with autoconf to produce a configure script.
dnl 
dnl  Jukebox is an Electronic Records Management System
dnl  Copyright (C) 2017 Nicolas Roche
dnl 
dnl  This program is free software: you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation, either version 3 of the License, or
dnl  any later version.
dnl 
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl 
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT([mdtxSsoSrv], [0.1], [nroche@narval.fr.eu.org])
AM_INIT_AUTOMAKE()

AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_AWK
AC_PROG_CC

AC_PREREQ

AC_CONFIG_FILES([
	Makefile
	])

AC_OUTPUT
